@@ -1,4 +1,4 @@
-INCLUDES= -I$(top_srcdir) $(GLIB_CFLAGS) $(ORBIT_CFLAGS)
+INCLUDES= -I$(top_srcdir) $(GLIB_CFLAGS) $(ORBIT_CFLAGS) $(XML_CFLAGS)
 
 backenddir = $(libdir)/gconf
 
